// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for 1 analysis datapoint 1`] = `
<div
  class="analysis-latest-results"
>
  <div
    class="makeStyles-root-1"
  >
    <div
      class="makeStyles-summary-3"
    >
      <div
        class="MuiPaper-root makeStyles-participantsPlotPaper-13 MuiPaper-elevation1 MuiPaper-rounded"
      >
        <h3
          class="MuiTypography-root MuiTypography-h3 MuiTypography-gutterBottom"
        >
          Participants by Variation
        </h3>
      </div>
      <div
        class="makeStyles-summaryColumn-7"
      >
        <div
          class="MuiPaper-root makeStyles-summaryStatsPaper-8 MuiPaper-elevation1 MuiPaper-rounded"
        >
          <div
            class="makeStyles-summaryStatsPart-9"
          >
            <h3
              class="MuiTypography-root makeStyles-summaryStatsStat-11 MuiTypography-h3 MuiTypography-colorPrimary"
            >
              1,000
            </h3>
            <h6
              class="MuiTypography-root MuiTypography-subtitle1"
            >
              <strong>
                analyzed participants
              </strong>
               as at
               
              2020-05-10
            </h6>
          </div>
          <div
            class="makeStyles-summaryStatsPart-9"
          >
            <h3
              class="MuiTypography-root makeStyles-summaryStatsStat-11 MuiTypography-h3 MuiTypography-colorPrimary"
            >
              Deploy 
              test
            </h3>
            <h6
              class="MuiTypography-root MuiTypography-subtitle1"
            >
              <strong>
                primary metric
              </strong>
               recommendation
            </h6>
          </div>
        </div>
        <div
          class="MuiPaper-root makeStyles-summaryStatsPaper-8 makeStyles-root-15 MuiPaper-elevation1 MuiPaper-rounded"
        >
          <div
            class=""
            title="There is a 100.00% 
              probability that this result occurred by random chance."
          >
            <span
              aria-label="Nominal"
              role="img"
            >
              🆗
            </span>
             
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
              href="https://github.com/Automattic/experimentation-platform/wiki/Experiment-Health#assignment-distribution-matching-allocated"
            >
              Assignment distribution matching allocated
            </a>
          </div>
          <div
            class=""
            title="There is a 100.00% 
              probability that this result occurred by random chance."
          >
            <span
              aria-label="Nominal"
              role="img"
            >
              🆗
            </span>
             
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
              href="https://github.com/Automattic/experimentation-platform/wiki/Experiment-Health#exposure-event-distribution-matching-allocated-sample-ratio-mismatch"
            >
              Exposure event distribution matching allocated
            </a>
          </div>
          <div
            class=""
            title="There is a 100.00% 
              probability that this result occurred by random chance."
          >
            <span
              aria-label="Nominal"
              role="img"
            >
              🆗
            </span>
             
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
              href="https://github.com/Automattic/experimentation-platform/wiki/Experiment-Health#spammer-distribution-matching-allocated"
            >
              Spammer distribution matching allocated
            </a>
          </div>
          <div
            class=""
            title="Ratio: 0.000000"
          >
            <span
              aria-label="Nominal"
              role="img"
            >
              🆗
            </span>
             
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
              href="https://github.com/Automattic/experimentation-platform/wiki/Experiment-Health#total-crossovers"
            >
              Total crossovers
            </a>
          </div>
          <div
            class=""
            title="Ratio: 0.000000"
          >
            <span
              aria-label="Nominal"
              role="img"
            >
              🆗
            </span>
             
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
              href="https://github.com/Automattic/experimentation-platform/wiki/Experiment-Health#total-spammers"
            >
              Total spammers
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded"
      style="position: relative;"
    >
      <div
        class="Component-horizontalScrollContainer-20"
        style="overflow-x: auto; position: relative;"
      >
        <div>
          <div
            style="overflow-y: auto;"
          >
            <div>
              <table
                class="MuiTable-root"
                style="table-layout: auto;"
              >
                <thead
                  class="MuiTableHead-root"
                >
                  <tr
                    class="MuiTableRow-root MuiTableRow-head"
                  >
                    <th
                      class="MuiTableCell-root MuiTableCell-head MTableHeader-header-21 MuiTableCell-paddingNone"
                      scope="col"
                      style="font-weight: 700;"
                    />
                    <th
                      class="MuiTableCell-root MuiTableCell-head MTableHeader-header-21 MuiTableCell-alignLeft"
                      scope="col"
                      style="font-weight: 700; box-sizing: border-box;"
                    >
                      Metric
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head MTableHeader-header-21 MuiTableCell-alignLeft"
                      scope="col"
                      style="font-weight: 700; box-sizing: border-box;"
                    >
                      Attribution window
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head MTableHeader-header-21 MuiTableCell-alignLeft"
                      scope="col"
                      style="font-weight: 700; box-sizing: border-box;"
                    >
                      Recommendation
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="MuiTableBody-root"
                >
                  <tr
                    class="MuiTableRow-root MuiTableRow-hover"
                    index="0"
                    level="0"
                    path="0"
                    style="transition: all ease 300ms; opacity: 0.8; cursor: pointer;"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone"
                    >
                      <div
                        style="width: 42px; text-align: center; display: flex;"
                      >
                        <button
                          class="MuiButtonBase-root MuiIconButton-root"
                          style="transition: all ease 200ms; transform: none;"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <span
                              aria-hidden="true"
                              class="material-icons MuiIcon-root"
                            >
                              chevron_right
                            </span>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box; font-family: 'Roboto Mono', monospace; font-weight: 600;"
                    >
                      metric_1
                       
                      <div
                        aria-disabled="true"
                        class="MuiChip-root makeStyles-primaryChip-2 MuiChip-outlined Mui-disabled"
                      >
                        <span
                          class="MuiChip-label"
                        >
                          Primary
                        </span>
                      </div>
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box; font-family: 'Roboto Mono', monospace;"
                    >
                      1 week
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box; font-family: 'Roboto Mono', monospace;"
                    >
                      Deploy 
                      test
                    </td>
                  </tr>
                  <tr
                    class="MuiTableRow-root MuiTableRow-hover"
                    index="1"
                    level="0"
                    path="1"
                    style="transition: all ease 300ms; opacity: 0.8; cursor: pointer;"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone"
                    >
                      <div
                        style="width: 42px; text-align: center; display: flex;"
                      >
                        <button
                          class="MuiButtonBase-root MuiIconButton-root"
                          style="transition: all ease 200ms; transform: none;"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <span
                              aria-hidden="true"
                              class="material-icons MuiIcon-root"
                            >
                              chevron_right
                            </span>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box; font-family: 'Roboto Mono', monospace; font-weight: 600;"
                    >
                      metric_2
                       
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box; font-family: 'Roboto Mono', monospace;"
                    >
                      1 hour
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box; font-family: 'Roboto Mono', monospace;"
                    >
                      Not analyzed yet
                    </td>
                  </tr>
                  <tr
                    class="MuiTableRow-root MuiTableRow-hover"
                    index="2"
                    level="0"
                    path="2"
                    style="transition: all ease 300ms; opacity: 0.8; cursor: pointer;"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone"
                    >
                      <div
                        style="width: 42px; text-align: center; display: flex;"
                      >
                        <button
                          class="MuiButtonBase-root MuiIconButton-root"
                          style="transition: all ease 200ms; transform: none;"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <span
                              aria-hidden="true"
                              class="material-icons MuiIcon-root"
                            >
                              chevron_right
                            </span>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box; font-family: 'Roboto Mono', monospace; font-weight: 600;"
                    >
                      metric_2
                       
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box; font-family: 'Roboto Mono', monospace;"
                    >
                      4 weeks
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box; font-family: 'Roboto Mono', monospace;"
                    >
                      Not analyzed yet
                    </td>
                  </tr>
                  <tr
                    class="MuiTableRow-root MuiTableRow-hover"
                    index="3"
                    level="0"
                    path="3"
                    style="transition: all ease 300ms; opacity: 0.8; cursor: pointer;"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone"
                    >
                      <div
                        style="width: 42px; text-align: center; display: flex;"
                      >
                        <button
                          class="MuiButtonBase-root MuiIconButton-root"
                          style="transition: all ease 200ms; transform: none;"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <span
                              aria-hidden="true"
                              class="material-icons MuiIcon-root"
                            >
                              chevron_right
                            </span>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box; font-family: 'Roboto Mono', monospace; font-weight: 600;"
                    >
                      metric_3
                       
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box; font-family: 'Roboto Mono', monospace;"
                    >
                      6 hours
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box; font-family: 'Roboto Mono', monospace;"
                    >
                      Not analyzed yet
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly for 1 analysis datapoint 2`] = `
<div
  class="MuiTableContainer-root makeStyles-root-22 analysis-detail-panel"
>
  <p
    class="MuiTypography-root makeStyles-noPlotMessage-28 MuiTypography-body1"
  >
    Past values will be plotted once we have more than one day of results.
  </p>
  <h4
    class="MuiTypography-root makeStyles-tableHeader-29 MuiTypography-h4"
  >
    Latest Estimates
  </h4>
  <table
    class="MuiTable-root"
  >
    <tbody
      class="MuiTableBody-root"
    >
      <tr
        class="MuiTableRow-root"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-rowHeader-30 makeStyles-headerCell-23"
          role="cell"
          scope="row"
        >
          Difference
        </th>
        <td
          class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-24"
        >
          [
          
          -1
          <span
            class="makeStyles-root-31"
            title="Percentage points."
          >
            pp
          </span>
          , 
          
          1
          <span
            class="makeStyles-root-31"
            title="Percentage points."
          >
            pp
          </span>
          ]
          <br />
          <br />
          <strong>
            Interpretation:
          </strong>
          <br />
          There is a 95% probability that the difference between variations is between
           
          
          -1
          <span
            class="makeStyles-root-31"
            title="Percentage points."
          >
            pp
          </span>
           
          and
           
          
          1
          <span
            class="makeStyles-root-31"
            title="Percentage points."
          >
            pp
          </span>
          .
        </td>
      </tr>
      <tr
        class="MuiTableRow-root"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-rowHeader-30 makeStyles-headerCell-23"
          role="cell"
          scope="row"
          valign="top"
        >
          <span
            class="makeStyles-monospace-24"
          >
            test
          </span>
        </th>
        <td
          class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-24"
        >
          [
          
          -112.3
          %
          , 
          
          100
          %
          ]
          <br />
          <br />
          <strong>
            Interpretation:
          </strong>
          <br />
          There is a 95% probability that the metric value for this variation is between
           
          
          -112.3
          %
           
          and
           
          
          100
          %
          .
        </td>
      </tr>
      <tr
        class="MuiTableRow-root"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-rowHeader-30 makeStyles-headerCell-23"
          role="cell"
          scope="row"
          valign="top"
        >
          <span
            class="makeStyles-monospace-24"
          >
            control
          </span>
        </th>
        <td
          class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-24"
        >
          [
          
          0
          %
          , 
          
          1000
          %
          ]
          <br />
          <br />
          <strong>
            Interpretation:
          </strong>
          <br />
          There is a 95% probability that the metric value for this variation is between
           
          
          0
          %
           
          and
           
          
          1000
          %
          .
        </td>
      </tr>
      <tr
        class="MuiTableRow-root"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell-23"
          role="cell"
          scope="row"
        >
          <span
            aria-label=""
            role="img"
          >
            ⚠️
          </span>
           
          Warnings
        </th>
        <td
          class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-24"
        >
          <div>
            Experiment period is too short. Wait a few days to be safer.
          </div>
          <div>
            The CI is too wide in comparison to the ROPE. Collect more data to be safer.
          </div>
        </td>
      </tr>
    </tbody>
  </table>
  <h4
    class="MuiTypography-root makeStyles-tableHeader-29 MuiTypography-h4"
  >
    Metric Assignment Details
  </h4>
  <table
    class="MuiTable-root"
  >
    <tbody
      class="MuiTableBody-root"
    >
      <tr
        class="MuiTableRow-root"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell-23"
          role="cell"
          scope="row"
        >
          Metric Description
        </th>
        <td
          class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-24"
        >
          This is metric 1
        </td>
      </tr>
      <tr
        class="MuiTableRow-root"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell-23"
          role="cell"
          scope="row"
        >
          Minimum Practical Difference
        </th>
        <td
          class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-24"
        >
          
          10
          <span
            class="makeStyles-root-31"
            title="Percentage points."
          >
            pp
          </span>
        </td>
      </tr>
      <tr
        class="MuiTableRow-root"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell-23"
          role="cell"
          scope="row"
        >
          Change Expected
        </th>
        <td
          class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-24"
        >
          Yes
        </td>
      </tr>
    </tbody>
  </table>
  <h4
    class="MuiTypography-root makeStyles-tableHeader-29 MuiTypography-h4"
  >
    Analysis Fine Print
  </h4>
  <table
    class="MuiTable-root"
  >
    <tbody
      class="MuiTableBody-root"
    >
      <tr
        class="MuiTableRow-root"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell-23"
          role="cell"
          scope="row"
        >
          Last analyzed
        </th>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          <span
            class="makeStyles-root-32"
            title="09/05/2020, 20:00:00"
          >
            2020-05-10
          </span>
        </td>
      </tr>
      <tr
        class="MuiTableRow-root"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell-23"
          role="cell"
          scope="row"
        >
          Analysis strategy
        </th>
        <td
          class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-24"
        >
          Exposed without crossovers and spammers
        </td>
      </tr>
      <tr
        class="MuiTableRow-root"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell-23"
          role="cell"
          scope="row"
        >
          Analyzed participants
        </th>
        <td
          class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-24"
        >
          1000
           (
          600 in control; 400 in test
          )
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`renders correctly for 1 analysis datapoint 3`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "className": "makeStyles-participantsPlot-14",
        "data": Array [
          Object {
            "line": Object {
              "color": "#1f78b488",
            },
            "mode": "lines+markers",
            "name": "test",
            "type": "scatter",
            "x": Array [
              "2020-05-10T00:00:00.000Z",
            ],
            "y": Array [
              400,
            ],
          },
          Object {
            "line": Object {
              "color": "#ff7f0088",
            },
            "mode": "lines+markers",
            "name": "control",
            "type": "scatter",
            "x": Array [
              "2020-05-10T00:00:00.000Z",
            ],
            "y": Array [
              600,
            ],
          },
        ],
        "debug": false,
        "layout": Object {
          "autosize": true,
          "hoverlabel": Object {
            "namelength": -1,
          },
          "margin": Object {
            "b": 48,
            "l": 32,
            "r": 16,
            "t": 0,
          },
          "showlegend": false,
        },
        "style": Object {
          "display": "inline-block",
          "position": "relative",
        },
        "useResizeHandler": false,
      },
      Object {},
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`renders the condensed table with some analyses in non-debug mode for a Conversion Metric 1`] = `
<div
  class="analysis-latest-results"
>
  <div
    class="makeStyles-root-33"
  >
    <div
      class="makeStyles-summary-35"
    >
      <div
        class="MuiPaper-root makeStyles-participantsPlotPaper-45 MuiPaper-elevation1 MuiPaper-rounded"
      >
        <h3
          class="MuiTypography-root MuiTypography-h3 MuiTypography-gutterBottom"
        >
          Participants by Variation
        </h3>
      </div>
      <div
        class="makeStyles-summaryColumn-39"
      >
        <div
          class="MuiPaper-root makeStyles-summaryStatsPaper-40 MuiPaper-elevation1 MuiPaper-rounded"
        >
          <div
            class="makeStyles-summaryStatsPart-41"
          >
            <h3
              class="MuiTypography-root makeStyles-summaryStatsStat-43 MuiTypography-h3 MuiTypography-colorPrimary"
            >
              700
            </h3>
            <h6
              class="MuiTypography-root MuiTypography-subtitle1"
            >
              <strong>
                analyzed participants
              </strong>
               as at
               
              2020-05-10
            </h6>
          </div>
          <div
            class="makeStyles-summaryStatsPart-41"
          >
            <h3
              class="MuiTypography-root makeStyles-summaryStatsStat-43 MuiTypography-h3 MuiTypography-colorPrimary"
            >
              Manual analysis required
            </h3>
            <h6
              class="MuiTypography-root MuiTypography-subtitle1"
            >
              <strong>
                primary metric
              </strong>
               recommendation
            </h6>
          </div>
        </div>
        <div
          class="MuiPaper-root makeStyles-summaryStatsPaper-40 makeStyles-root-47 MuiPaper-elevation1 MuiPaper-rounded"
        >
          <div
            class=""
            title="There is a 100.00% 
              probability that this result occurred by random chance."
          >
            <span
              aria-label="Nominal"
              role="img"
            >
              🆗
            </span>
             
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
              href="https://github.com/Automattic/experimentation-platform/wiki/Experiment-Health#assignment-distribution-matching-allocated"
            >
              Assignment distribution matching allocated
            </a>
          </div>
          <div
            class=""
            title="There is a 100.00% 
              probability that this result occurred by random chance."
          >
            <span
              aria-label="Nominal"
              role="img"
            >
              🆗
            </span>
             
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
              href="https://github.com/Automattic/experimentation-platform/wiki/Experiment-Health#exposure-event-distribution-matching-allocated-sample-ratio-mismatch"
            >
              Exposure event distribution matching allocated
            </a>
          </div>
          <div
            class=""
            title="There is a 100.00% 
              probability that this result occurred by random chance."
          >
            <span
              aria-label="Nominal"
              role="img"
            >
              🆗
            </span>
             
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
              href="https://github.com/Automattic/experimentation-platform/wiki/Experiment-Health#spammer-distribution-matching-allocated"
            >
              Spammer distribution matching allocated
            </a>
          </div>
          <div
            class=""
            title="Ratio: 0.100000"
          >
            <span
              aria-label="CertainIssue"
              role="img"
            >
              🆘
            </span>
             
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
              href="https://github.com/Automattic/experimentation-platform/wiki/Experiment-Health#total-crossovers"
            >
              Total crossovers
            </a>
          </div>
          <div
            class=""
            title="Ratio: 0.150000"
          >
            <span
              aria-label="PossibleIssue"
              role="img"
            >
              ✴️
            </span>
             
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
              href="https://github.com/Automattic/experimentation-platform/wiki/Experiment-Health#total-spammers"
            >
              Total spammers
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded"
      style="position: relative;"
    >
      <div
        class="Component-horizontalScrollContainer-52"
        style="overflow-x: auto; position: relative;"
      >
        <div>
          <div
            style="overflow-y: auto;"
          >
            <div>
              <table
                class="MuiTable-root"
                style="table-layout: auto;"
              >
                <thead
                  class="MuiTableHead-root"
                >
                  <tr
                    class="MuiTableRow-root MuiTableRow-head"
                  >
                    <th
                      class="MuiTableCell-root MuiTableCell-head MTableHeader-header-53 MuiTableCell-paddingNone"
                      scope="col"
                      style="font-weight: 700;"
                    />
                    <th
                      class="MuiTableCell-root MuiTableCell-head MTableHeader-header-53 MuiTableCell-alignLeft"
                      scope="col"
                      style="font-weight: 700; box-sizing: border-box;"
                    >
                      Metric
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head MTableHeader-header-53 MuiTableCell-alignLeft"
                      scope="col"
                      style="font-weight: 700; box-sizing: border-box;"
                    >
                      Attribution window
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head MTableHeader-header-53 MuiTableCell-alignLeft"
                      scope="col"
                      style="font-weight: 700; box-sizing: border-box;"
                    >
                      Recommendation
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="MuiTableBody-root"
                >
                  <tr
                    class="MuiTableRow-root MuiTableRow-hover"
                    index="0"
                    level="0"
                    path="0"
                    style="transition: all ease 300ms; opacity: 0.8; cursor: pointer;"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone"
                    >
                      <div
                        style="width: 42px; text-align: center; display: flex;"
                      >
                        <button
                          class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
                          disabled=""
                          style="transition: all ease 200ms; transform: none;"
                          tabindex="-1"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <span
                              aria-hidden="true"
                              class="material-icons MuiIcon-root"
                            >
                              chevron_right
                            </span>
                          </span>
                        </button>
                      </div>
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box; font-family: 'Roboto Mono', monospace; font-weight: 600;"
                    >
                      metric_1
                       
                      <div
                        aria-disabled="true"
                        class="MuiChip-root makeStyles-primaryChip-34 MuiChip-outlined Mui-disabled"
                      >
                        <span
                          class="MuiChip-label"
                        >
                          Primary
                        </span>
                      </div>
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box; font-family: 'Roboto Mono', monospace;"
                    >
                      1 week
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box; font-family: 'Roboto Mono', monospace;"
                    >
                      Manual analysis required
                    </td>
                  </tr>
                  <tr
                    class="MuiTableRow-root MuiTableRow-hover"
                    index="1"
                    level="0"
                    path="1"
                    style="transition: all ease 300ms; opacity: 0.8; cursor: pointer;"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone"
                    >
                      <div
                        style="width: 42px; text-align: center; display: flex;"
                      >
                        <button
                          class="MuiButtonBase-root MuiIconButton-root"
                          style="transition: all ease 200ms; transform: none;"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <span
                              aria-hidden="true"
                              class="material-icons MuiIcon-root"
                            >
                              chevron_right
                            </span>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box; font-family: 'Roboto Mono', monospace; font-weight: 600;"
                    >
                      metric_2
                       
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box; font-family: 'Roboto Mono', monospace;"
                    >
                      1 hour
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box; font-family: 'Roboto Mono', monospace;"
                    >
                      Not analyzed yet
                    </td>
                  </tr>
                  <tr
                    class="MuiTableRow-root MuiTableRow-hover"
                    index="2"
                    level="0"
                    path="2"
                    style="transition: all ease 300ms; opacity: 0.8; cursor: pointer;"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone"
                    >
                      <div
                        style="width: 42px; text-align: center; display: flex;"
                      >
                        <button
                          class="MuiButtonBase-root MuiIconButton-root"
                          style="transition: all ease 200ms; transform: none;"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <span
                              aria-hidden="true"
                              class="material-icons MuiIcon-root"
                            >
                              chevron_right
                            </span>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box; font-family: 'Roboto Mono', monospace; font-weight: 600;"
                    >
                      metric_2
                       
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box; font-family: 'Roboto Mono', monospace;"
                    >
                      4 weeks
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box; font-family: 'Roboto Mono', monospace;"
                    >
                      Not analyzed yet
                    </td>
                  </tr>
                  <tr
                    class="MuiTableRow-root MuiTableRow-hover"
                    index="3"
                    level="0"
                    path="3"
                    style="transition: all ease 300ms; opacity: 0.8; cursor: pointer;"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone"
                    >
                      <div
                        style="width: 42px; text-align: center; display: flex;"
                      >
                        <button
                          class="MuiButtonBase-root MuiIconButton-root"
                          style="transition: all ease 200ms; transform: none;"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <span
                              aria-hidden="true"
                              class="material-icons MuiIcon-root"
                            >
                              chevron_right
                            </span>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box; font-family: 'Roboto Mono', monospace; font-weight: 600;"
                    >
                      metric_3
                       
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box; font-family: 'Roboto Mono', monospace;"
                    >
                      6 hours
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box; font-family: 'Roboto Mono', monospace;"
                    >
                      Deploy 
                      test
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the condensed table with some analyses in non-debug mode for a Conversion Metric 2`] = `
<div
  class="MuiTableContainer-root makeStyles-root-54 analysis-detail-panel"
>
  <div
    class="makeStyles-metricEstimatePlots-57"
  />
  <h4
    class="MuiTypography-root makeStyles-tableHeader-61 MuiTypography-h4"
  >
    Latest Estimates
  </h4>
  <table
    class="MuiTable-root"
  >
    <tbody
      class="MuiTableBody-root"
    >
      <tr
        class="MuiTableRow-root"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-rowHeader-62 makeStyles-headerCell-55"
          role="cell"
          scope="row"
        >
          Difference
        </th>
        <td
          class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-56"
        >
          [
          
          -1
          <span
            class="makeStyles-root-63"
            title="Percentage points."
          >
            pp
          </span>
          , 
          
          1
          <span
            class="makeStyles-root-63"
            title="Percentage points."
          >
            pp
          </span>
          ]
          <br />
          <br />
          <strong>
            Interpretation:
          </strong>
          <br />
          There is a 95% probability that the difference between variations is between
           
          
          -1
          <span
            class="makeStyles-root-63"
            title="Percentage points."
          >
            pp
          </span>
           
          and
           
          
          1
          <span
            class="makeStyles-root-63"
            title="Percentage points."
          >
            pp
          </span>
          .
        </td>
      </tr>
      <tr
        class="MuiTableRow-root"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-rowHeader-62 makeStyles-headerCell-55"
          role="cell"
          scope="row"
          valign="top"
        >
          <span
            class="makeStyles-monospace-56"
          >
            test
          </span>
        </th>
        <td
          class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-56"
        >
          [
          
          -112.3
          %
          , 
          
          100
          %
          ]
          <br />
          <br />
          <strong>
            Interpretation:
          </strong>
          <br />
          There is a 95% probability that the metric value for this variation is between
           
          
          -112.3
          %
           
          and
           
          
          100
          %
          .
        </td>
      </tr>
      <tr
        class="MuiTableRow-root"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-rowHeader-62 makeStyles-headerCell-55"
          role="cell"
          scope="row"
          valign="top"
        >
          <span
            class="makeStyles-monospace-56"
          >
            control
          </span>
        </th>
        <td
          class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-56"
        >
          [
          
          0
          %
          , 
          
          1000
          %
          ]
          <br />
          <br />
          <strong>
            Interpretation:
          </strong>
          <br />
          There is a 95% probability that the metric value for this variation is between
           
          
          0
          %
           
          and
           
          
          1000
          %
          .
        </td>
      </tr>
      <tr
        class="MuiTableRow-root"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell-55"
          role="cell"
          scope="row"
        >
          <span
            aria-label=""
            role="img"
          >
            ⚠️
          </span>
           
          Warnings
        </th>
        <td
          class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-56"
        >
          <div>
            Experiment period is too short. Wait a few days to be safer.
          </div>
          <div>
            The CI is too wide in comparison to the ROPE. Collect more data to be safer.
          </div>
        </td>
      </tr>
    </tbody>
  </table>
  <h4
    class="MuiTypography-root makeStyles-tableHeader-61 MuiTypography-h4"
  >
    Metric Assignment Details
  </h4>
  <table
    class="MuiTable-root"
  >
    <tbody
      class="MuiTableBody-root"
    >
      <tr
        class="MuiTableRow-root"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell-55"
          role="cell"
          scope="row"
        >
          Metric Description
        </th>
        <td
          class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-56"
        >
          This is metric 3
        </td>
      </tr>
      <tr
        class="MuiTableRow-root"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell-55"
          role="cell"
          scope="row"
        >
          Minimum Practical Difference
        </th>
        <td
          class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-56"
        >
          
          1200
          <span
            class="makeStyles-root-63"
            title="Percentage points."
          >
            pp
          </span>
        </td>
      </tr>
      <tr
        class="MuiTableRow-root"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell-55"
          role="cell"
          scope="row"
        >
          Change Expected
        </th>
        <td
          class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-56"
        >
          Yes
        </td>
      </tr>
    </tbody>
  </table>
  <h4
    class="MuiTypography-root makeStyles-tableHeader-61 MuiTypography-h4"
  >
    Analysis Fine Print
  </h4>
  <table
    class="MuiTable-root"
  >
    <tbody
      class="MuiTableBody-root"
    >
      <tr
        class="MuiTableRow-root"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell-55"
          role="cell"
          scope="row"
        >
          Last analyzed
        </th>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          <span
            class="makeStyles-root-64"
            title="10/06/2020, 20:00:00"
          >
            2020-06-11
          </span>
        </td>
      </tr>
      <tr
        class="MuiTableRow-root"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell-55"
          role="cell"
          scope="row"
        >
          Analysis strategy
        </th>
        <td
          class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-56"
        >
          Exposed without crossovers and spammers
        </td>
      </tr>
      <tr
        class="MuiTableRow-root"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell-55"
          role="cell"
          scope="row"
        >
          Analyzed participants
        </th>
        <td
          class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-56"
        >
          1200
           (
          940 in control; 660 in test
          )
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`renders the condensed table with some analyses in non-debug mode for a Conversion Metric 3`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "className": "makeStyles-participantsPlot-46",
        "data": Array [
          Object {
            "line": Object {
              "color": "#1f78b488",
            },
            "mode": "lines+markers",
            "name": "test",
            "type": "scatter",
            "x": Array [
              "2020-05-09T00:00:00.000Z",
              "2020-05-10T00:00:00.000Z",
            ],
            "y": Array [
              28,
              280,
            ],
          },
          Object {
            "line": Object {
              "color": "#ff7f0088",
            },
            "mode": "lines+markers",
            "name": "control",
            "type": "scatter",
            "x": Array [
              "2020-05-09T00:00:00.000Z",
              "2020-05-10T00:00:00.000Z",
            ],
            "y": Array [
              42,
              420,
            ],
          },
        ],
        "debug": false,
        "layout": Object {
          "autosize": true,
          "hoverlabel": Object {
            "namelength": -1,
          },
          "margin": Object {
            "b": 48,
            "l": 32,
            "r": 16,
            "t": 0,
          },
          "showlegend": false,
        },
        "style": Object {
          "display": "inline-block",
          "position": "relative",
        },
        "useResizeHandler": false,
      },
      Object {},
    ],
    Array [
      Object {
        "className": "makeStyles-metricEstimatePlot-58",
        "data": Array [
          Object {
            "line": Object {
              "color": "#1f78b488",
            },
            "mode": "lines",
            "name": "test: lower bound",
            "type": "scatter",
            "x": Array [
              "2020-05-10T00:00:00.000Z",
              "2020-06-11T00:00:00.000Z",
            ],
            "y": Array [
              -112.3,
              -112.3,
            ],
          },
          Object {
            "fill": "tonexty",
            "fillcolor": "#1f78b488",
            "line": Object {
              "color": "#1f78b488",
            },
            "mode": "lines",
            "name": "test: upper bound",
            "type": "scatter",
            "x": Array [
              "2020-05-10T00:00:00.000Z",
              "2020-06-11T00:00:00.000Z",
            ],
            "y": Array [
              100,
              100,
            ],
          },
          Object {
            "line": Object {
              "color": "#ff7f0088",
            },
            "mode": "lines",
            "name": "control: lower bound",
            "type": "scatter",
            "x": Array [
              "2020-05-10T00:00:00.000Z",
              "2020-06-11T00:00:00.000Z",
            ],
            "y": Array [
              0,
              0,
            ],
          },
          Object {
            "fill": "tonexty",
            "fillcolor": "#ff7f0088",
            "line": Object {
              "color": "#ff7f0088",
            },
            "mode": "lines",
            "name": "control: upper bound",
            "type": "scatter",
            "x": Array [
              "2020-05-10T00:00:00.000Z",
              "2020-06-11T00:00:00.000Z",
            ],
            "y": Array [
              1000,
              1000,
            ],
          },
        ],
        "debug": false,
        "layout": Object {
          "autosize": true,
          "hoverlabel": Object {
            "namelength": -1,
          },
          "margin": Object {
            "b": 48,
            "l": 32,
            "r": 16,
            "t": 64,
          },
          "showlegend": false,
          "title": "Conversion rate estimates by variation (%)",
        },
        "style": Object {
          "display": "inline-block",
          "position": "relative",
        },
        "useResizeHandler": false,
      },
      Object {},
    ],
    Array [
      Object {
        "className": "makeStyles-metricEstimatePlot-58",
        "data": Array [
          Object {
            "line": Object {
              "width": 0,
            },
            "marker": Object {
              "color": "444",
            },
            "mode": "lines",
            "name": "difference: lower bound",
            "type": "scatter",
            "x": Array [
              "2020-05-10T00:00:00.000Z",
              "2020-06-11T00:00:00.000Z",
            ],
            "y": Array [
              -1,
              -1,
            ],
          },
          Object {
            "fill": "tonexty",
            "fillcolor": "rgba(0,0,0,.2)",
            "line": Object {
              "width": 0,
            },
            "marker": Object {
              "color": "444",
            },
            "mode": "lines",
            "name": "difference: upper bound",
            "type": "scatter",
            "x": Array [
              "2020-05-10T00:00:00.000Z",
              "2020-06-11T00:00:00.000Z",
            ],
            "y": Array [
              1,
              1,
            ],
          },
          Object {
            "line": Object {
              "color": "rgba(0,0,0,.4)",
              "dash": "dash",
            },
            "mode": "lines",
            "name": "ROPE: lower bound",
            "type": "scatter",
            "x": Array [
              "2020-05-10T00:00:00.000Z",
              "2020-06-11T00:00:00.000Z",
            ],
            "y": Array [
              -1200,
              -1200,
            ],
          },
          Object {
            "line": Object {
              "color": "rgba(0,0,0,.4)",
              "dash": "dash",
            },
            "mode": "lines",
            "name": "ROPE: upper bound",
            "type": "scatter",
            "x": Array [
              "2020-05-10T00:00:00.000Z",
              "2020-06-11T00:00:00.000Z",
            ],
            "y": Array [
              1200,
              1200,
            ],
          },
        ],
        "debug": false,
        "layout": Object {
          "autosize": true,
          "hoverlabel": Object {
            "namelength": -1,
          },
          "margin": Object {
            "b": 48,
            "l": 32,
            "r": 16,
            "t": 64,
          },
          "showlegend": false,
          "title": "Conversion rate difference estimates (percentage points)",
        },
        "style": Object {
          "display": "inline-block",
          "position": "relative",
        },
        "useResizeHandler": false,
      },
      Object {},
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`renders the condensed table with some analyses in non-debug mode for a Revenue Metric 1`] = `
<div
  class="analysis-latest-results"
>
  <div
    class="makeStyles-root-65"
  >
    <div
      class="makeStyles-summary-67"
    >
      <div
        class="MuiPaper-root makeStyles-participantsPlotPaper-77 MuiPaper-elevation1 MuiPaper-rounded"
      >
        <h3
          class="MuiTypography-root MuiTypography-h3 MuiTypography-gutterBottom"
        >
          Participants by Variation
        </h3>
      </div>
      <div
        class="makeStyles-summaryColumn-71"
      >
        <div
          class="MuiPaper-root makeStyles-summaryStatsPaper-72 MuiPaper-elevation1 MuiPaper-rounded"
        >
          <div
            class="makeStyles-summaryStatsPart-73"
          >
            <h3
              class="MuiTypography-root makeStyles-summaryStatsStat-75 MuiTypography-h3 MuiTypography-colorPrimary"
            >
              700
            </h3>
            <h6
              class="MuiTypography-root MuiTypography-subtitle1"
            >
              <strong>
                analyzed participants
              </strong>
               as at
               
              2020-05-10
            </h6>
          </div>
          <div
            class="makeStyles-summaryStatsPart-73"
          >
            <h3
              class="MuiTypography-root makeStyles-summaryStatsStat-75 MuiTypography-h3 MuiTypography-colorPrimary"
            >
              Manual analysis required
            </h3>
            <h6
              class="MuiTypography-root MuiTypography-subtitle1"
            >
              <strong>
                primary metric
              </strong>
               recommendation
            </h6>
          </div>
        </div>
        <div
          class="MuiPaper-root makeStyles-summaryStatsPaper-72 makeStyles-root-79 MuiPaper-elevation1 MuiPaper-rounded"
        >
          <div
            class=""
            title="There is a 100.00% 
              probability that this result occurred by random chance."
          >
            <span
              aria-label="Nominal"
              role="img"
            >
              🆗
            </span>
             
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
              href="https://github.com/Automattic/experimentation-platform/wiki/Experiment-Health#assignment-distribution-matching-allocated"
            >
              Assignment distribution matching allocated
            </a>
          </div>
          <div
            class=""
            title="There is a 100.00% 
              probability that this result occurred by random chance."
          >
            <span
              aria-label="Nominal"
              role="img"
            >
              🆗
            </span>
             
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
              href="https://github.com/Automattic/experimentation-platform/wiki/Experiment-Health#exposure-event-distribution-matching-allocated-sample-ratio-mismatch"
            >
              Exposure event distribution matching allocated
            </a>
          </div>
          <div
            class=""
            title="There is a 100.00% 
              probability that this result occurred by random chance."
          >
            <span
              aria-label="Nominal"
              role="img"
            >
              🆗
            </span>
             
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
              href="https://github.com/Automattic/experimentation-platform/wiki/Experiment-Health#spammer-distribution-matching-allocated"
            >
              Spammer distribution matching allocated
            </a>
          </div>
          <div
            class=""
            title="Ratio: 0.100000"
          >
            <span
              aria-label="CertainIssue"
              role="img"
            >
              🆘
            </span>
             
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
              href="https://github.com/Automattic/experimentation-platform/wiki/Experiment-Health#total-crossovers"
            >
              Total crossovers
            </a>
          </div>
          <div
            class=""
            title="Ratio: 0.150000"
          >
            <span
              aria-label="PossibleIssue"
              role="img"
            >
              ✴️
            </span>
             
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
              href="https://github.com/Automattic/experimentation-platform/wiki/Experiment-Health#total-spammers"
            >
              Total spammers
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded"
      style="position: relative;"
    >
      <div
        class="Component-horizontalScrollContainer-84"
        style="overflow-x: auto; position: relative;"
      >
        <div>
          <div
            style="overflow-y: auto;"
          >
            <div>
              <table
                class="MuiTable-root"
                style="table-layout: auto;"
              >
                <thead
                  class="MuiTableHead-root"
                >
                  <tr
                    class="MuiTableRow-root MuiTableRow-head"
                  >
                    <th
                      class="MuiTableCell-root MuiTableCell-head MTableHeader-header-85 MuiTableCell-paddingNone"
                      scope="col"
                      style="font-weight: 700;"
                    />
                    <th
                      class="MuiTableCell-root MuiTableCell-head MTableHeader-header-85 MuiTableCell-alignLeft"
                      scope="col"
                      style="font-weight: 700; box-sizing: border-box;"
                    >
                      Metric
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head MTableHeader-header-85 MuiTableCell-alignLeft"
                      scope="col"
                      style="font-weight: 700; box-sizing: border-box;"
                    >
                      Attribution window
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head MTableHeader-header-85 MuiTableCell-alignLeft"
                      scope="col"
                      style="font-weight: 700; box-sizing: border-box;"
                    >
                      Recommendation
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="MuiTableBody-root"
                >
                  <tr
                    class="MuiTableRow-root MuiTableRow-hover"
                    index="0"
                    level="0"
                    path="0"
                    style="transition: all ease 300ms; opacity: 0.8; cursor: pointer;"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone"
                    >
                      <div
                        style="width: 42px; text-align: center; display: flex;"
                      >
                        <button
                          class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
                          disabled=""
                          style="transition: all ease 200ms; transform: none;"
                          tabindex="-1"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <span
                              aria-hidden="true"
                              class="material-icons MuiIcon-root"
                            >
                              chevron_right
                            </span>
                          </span>
                        </button>
                      </div>
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box; font-family: 'Roboto Mono', monospace; font-weight: 600;"
                    >
                      metric_1
                       
                      <div
                        aria-disabled="true"
                        class="MuiChip-root makeStyles-primaryChip-66 MuiChip-outlined Mui-disabled"
                      >
                        <span
                          class="MuiChip-label"
                        >
                          Primary
                        </span>
                      </div>
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box; font-family: 'Roboto Mono', monospace;"
                    >
                      1 week
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box; font-family: 'Roboto Mono', monospace;"
                    >
                      Manual analysis required
                    </td>
                  </tr>
                  <tr
                    class="MuiTableRow-root MuiTableRow-hover"
                    index="1"
                    level="0"
                    path="1"
                    style="transition: all ease 300ms; opacity: 0.8; cursor: pointer;"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone"
                    >
                      <div
                        style="width: 42px; text-align: center; display: flex;"
                      >
                        <button
                          class="MuiButtonBase-root MuiIconButton-root"
                          style="transition: all ease 200ms; transform: none;"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <span
                              aria-hidden="true"
                              class="material-icons MuiIcon-root"
                            >
                              chevron_right
                            </span>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box; font-family: 'Roboto Mono', monospace; font-weight: 600;"
                    >
                      metric_2
                       
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box; font-family: 'Roboto Mono', monospace;"
                    >
                      1 hour
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box; font-family: 'Roboto Mono', monospace;"
                    >
                      Not analyzed yet
                    </td>
                  </tr>
                  <tr
                    class="MuiTableRow-root MuiTableRow-hover"
                    index="2"
                    level="0"
                    path="2"
                    style="transition: all ease 300ms; opacity: 0.8; cursor: pointer;"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone"
                    >
                      <div
                        style="width: 42px; text-align: center; display: flex;"
                      >
                        <button
                          class="MuiButtonBase-root MuiIconButton-root"
                          style="transition: all ease 200ms; transform: none;"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <span
                              aria-hidden="true"
                              class="material-icons MuiIcon-root"
                            >
                              chevron_right
                            </span>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box; font-family: 'Roboto Mono', monospace; font-weight: 600;"
                    >
                      metric_2
                       
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box; font-family: 'Roboto Mono', monospace;"
                    >
                      4 weeks
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box; font-family: 'Roboto Mono', monospace;"
                    >
                      Not analyzed yet
                    </td>
                  </tr>
                  <tr
                    class="MuiTableRow-root MuiTableRow-hover"
                    index="3"
                    level="0"
                    path="3"
                    style="transition: all ease 300ms; opacity: 0.8; cursor: pointer;"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone"
                    >
                      <div
                        style="width: 42px; text-align: center; display: flex;"
                      >
                        <button
                          class="MuiButtonBase-root MuiIconButton-root"
                          style="transition: all ease 200ms; transform: none;"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiIconButton-label"
                          >
                            <span
                              aria-hidden="true"
                              class="material-icons MuiIcon-root"
                            >
                              chevron_right
                            </span>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box; font-family: 'Roboto Mono', monospace; font-weight: 600;"
                    >
                      metric_3
                       
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box; font-family: 'Roboto Mono', monospace;"
                    >
                      6 hours
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                      style="box-sizing: border-box; font-family: 'Roboto Mono', monospace;"
                    >
                      Deploy 
                      test
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the condensed table with some analyses in non-debug mode for a Revenue Metric 2`] = `
<div
  class="MuiTableContainer-root makeStyles-root-86 analysis-detail-panel"
>
  <div
    class="makeStyles-metricEstimatePlots-89"
  />
  <h4
    class="MuiTypography-root makeStyles-tableHeader-93 MuiTypography-h4"
  >
    Latest Estimates
  </h4>
  <table
    class="MuiTable-root"
  >
    <tbody
      class="MuiTableBody-root"
    >
      <tr
        class="MuiTableRow-root"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-rowHeader-94 makeStyles-headerCell-87"
          role="cell"
          scope="row"
        >
          Difference
        </th>
        <td
          class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-88"
        >
          [
          USD 
          -0.01
          
          , 
          USD 
          0.01
          
          ]
          <br />
          <br />
          <strong>
            Interpretation:
          </strong>
          <br />
          There is a 95% probability that the difference between variations is between
           
          USD 
          -0.01
          
           
          and
           
          USD 
          0.01
          
          .
        </td>
      </tr>
      <tr
        class="MuiTableRow-root"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-rowHeader-94 makeStyles-headerCell-87"
          role="cell"
          scope="row"
          valign="top"
        >
          <span
            class="makeStyles-monospace-88"
          >
            test
          </span>
        </th>
        <td
          class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-88"
        >
          [
          USD 
          -1.12
          
          , 
          USD 
          1
          
          ]
          <br />
          <br />
          <strong>
            Interpretation:
          </strong>
          <br />
          There is a 95% probability that the metric value for this variation is between
           
          USD 
          -1.12
          
           
          and
           
          USD 
          1
          
          .
        </td>
      </tr>
      <tr
        class="MuiTableRow-root"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-rowHeader-94 makeStyles-headerCell-87"
          role="cell"
          scope="row"
          valign="top"
        >
          <span
            class="makeStyles-monospace-88"
          >
            control
          </span>
        </th>
        <td
          class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-88"
        >
          [
          USD 
          0
          
          , 
          USD 
          10
          
          ]
          <br />
          <br />
          <strong>
            Interpretation:
          </strong>
          <br />
          There is a 95% probability that the metric value for this variation is between
           
          USD 
          0
          
           
          and
           
          USD 
          10
          
          .
        </td>
      </tr>
      <tr
        class="MuiTableRow-root"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell-87"
          role="cell"
          scope="row"
        >
          <span
            aria-label=""
            role="img"
          >
            ⚠️
          </span>
           
          Warnings
        </th>
        <td
          class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-88"
        >
          <div>
            Experiment period is too short. Wait a few days to be safer.
          </div>
          <div>
            The CI is too wide in comparison to the ROPE. Collect more data to be safer.
          </div>
        </td>
      </tr>
    </tbody>
  </table>
  <h4
    class="MuiTypography-root makeStyles-tableHeader-93 MuiTypography-h4"
  >
    Metric Assignment Details
  </h4>
  <table
    class="MuiTable-root"
  >
    <tbody
      class="MuiTableBody-root"
    >
      <tr
        class="MuiTableRow-root"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell-87"
          role="cell"
          scope="row"
        >
          Metric Description
        </th>
        <td
          class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-88"
        >
          This is metric 3
        </td>
      </tr>
      <tr
        class="MuiTableRow-root"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell-87"
          role="cell"
          scope="row"
        >
          Minimum Practical Difference
        </th>
        <td
          class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-88"
        >
          USD 
          12
          
        </td>
      </tr>
      <tr
        class="MuiTableRow-root"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell-87"
          role="cell"
          scope="row"
        >
          Change Expected
        </th>
        <td
          class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-88"
        >
          Yes
        </td>
      </tr>
    </tbody>
  </table>
  <h4
    class="MuiTypography-root makeStyles-tableHeader-93 MuiTypography-h4"
  >
    Analysis Fine Print
  </h4>
  <table
    class="MuiTable-root"
  >
    <tbody
      class="MuiTableBody-root"
    >
      <tr
        class="MuiTableRow-root"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell-87"
          role="cell"
          scope="row"
        >
          Last analyzed
        </th>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          <span
            class="makeStyles-root-95"
            title="10/06/2020, 20:00:00"
          >
            2020-06-11
          </span>
        </td>
      </tr>
      <tr
        class="MuiTableRow-root"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell-87"
          role="cell"
          scope="row"
        >
          Analysis strategy
        </th>
        <td
          class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-88"
        >
          Exposed without crossovers and spammers
        </td>
      </tr>
      <tr
        class="MuiTableRow-root"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell-87"
          role="cell"
          scope="row"
        >
          Analyzed participants
        </th>
        <td
          class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-88"
        >
          1200
           (
          940 in control; 660 in test
          )
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`renders the condensed table with some analyses in non-debug mode for a Revenue Metric 3`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "className": "makeStyles-participantsPlot-78",
        "data": Array [
          Object {
            "line": Object {
              "color": "#1f78b488",
            },
            "mode": "lines+markers",
            "name": "test",
            "type": "scatter",
            "x": Array [
              "2020-05-09T00:00:00.000Z",
              "2020-05-10T00:00:00.000Z",
            ],
            "y": Array [
              28,
              280,
            ],
          },
          Object {
            "line": Object {
              "color": "#ff7f0088",
            },
            "mode": "lines+markers",
            "name": "control",
            "type": "scatter",
            "x": Array [
              "2020-05-09T00:00:00.000Z",
              "2020-05-10T00:00:00.000Z",
            ],
            "y": Array [
              42,
              420,
            ],
          },
        ],
        "debug": false,
        "layout": Object {
          "autosize": true,
          "hoverlabel": Object {
            "namelength": -1,
          },
          "margin": Object {
            "b": 48,
            "l": 32,
            "r": 16,
            "t": 0,
          },
          "showlegend": false,
        },
        "style": Object {
          "display": "inline-block",
          "position": "relative",
        },
        "useResizeHandler": false,
      },
      Object {},
    ],
    Array [
      Object {
        "className": "makeStyles-metricEstimatePlot-90",
        "data": Array [
          Object {
            "line": Object {
              "color": "#1f78b488",
            },
            "mode": "lines",
            "name": "test: lower bound",
            "type": "scatter",
            "x": Array [
              "2020-05-10T00:00:00.000Z",
              "2020-06-11T00:00:00.000Z",
            ],
            "y": Array [
              -1.123,
              -1.123,
            ],
          },
          Object {
            "fill": "tonexty",
            "fillcolor": "#1f78b488",
            "line": Object {
              "color": "#1f78b488",
            },
            "mode": "lines",
            "name": "test: upper bound",
            "type": "scatter",
            "x": Array [
              "2020-05-10T00:00:00.000Z",
              "2020-06-11T00:00:00.000Z",
            ],
            "y": Array [
              1,
              1,
            ],
          },
          Object {
            "line": Object {
              "color": "#ff7f0088",
            },
            "mode": "lines",
            "name": "control: lower bound",
            "type": "scatter",
            "x": Array [
              "2020-05-10T00:00:00.000Z",
              "2020-06-11T00:00:00.000Z",
            ],
            "y": Array [
              0,
              0,
            ],
          },
          Object {
            "fill": "tonexty",
            "fillcolor": "#ff7f0088",
            "line": Object {
              "color": "#ff7f0088",
            },
            "mode": "lines",
            "name": "control: upper bound",
            "type": "scatter",
            "x": Array [
              "2020-05-10T00:00:00.000Z",
              "2020-06-11T00:00:00.000Z",
            ],
            "y": Array [
              10,
              10,
            ],
          },
        ],
        "debug": false,
        "layout": Object {
          "autosize": true,
          "hoverlabel": Object {
            "namelength": -1,
          },
          "margin": Object {
            "b": 48,
            "l": 32,
            "r": 16,
            "t": 64,
          },
          "showlegend": false,
          "title": "Revenue estimates by variation (USD)",
        },
        "style": Object {
          "display": "inline-block",
          "position": "relative",
        },
        "useResizeHandler": false,
      },
      Object {},
    ],
    Array [
      Object {
        "className": "makeStyles-metricEstimatePlot-90",
        "data": Array [
          Object {
            "line": Object {
              "width": 0,
            },
            "marker": Object {
              "color": "444",
            },
            "mode": "lines",
            "name": "difference: lower bound",
            "type": "scatter",
            "x": Array [
              "2020-05-10T00:00:00.000Z",
              "2020-06-11T00:00:00.000Z",
            ],
            "y": Array [
              -0.01,
              -0.01,
            ],
          },
          Object {
            "fill": "tonexty",
            "fillcolor": "rgba(0,0,0,.2)",
            "line": Object {
              "width": 0,
            },
            "marker": Object {
              "color": "444",
            },
            "mode": "lines",
            "name": "difference: upper bound",
            "type": "scatter",
            "x": Array [
              "2020-05-10T00:00:00.000Z",
              "2020-06-11T00:00:00.000Z",
            ],
            "y": Array [
              0.01,
              0.01,
            ],
          },
          Object {
            "line": Object {
              "color": "rgba(0,0,0,.4)",
              "dash": "dash",
            },
            "mode": "lines",
            "name": "ROPE: lower bound",
            "type": "scatter",
            "x": Array [
              "2020-05-10T00:00:00.000Z",
              "2020-06-11T00:00:00.000Z",
            ],
            "y": Array [
              -12,
              -12,
            ],
          },
          Object {
            "line": Object {
              "color": "rgba(0,0,0,.4)",
              "dash": "dash",
            },
            "mode": "lines",
            "name": "ROPE: upper bound",
            "type": "scatter",
            "x": Array [
              "2020-05-10T00:00:00.000Z",
              "2020-06-11T00:00:00.000Z",
            ],
            "y": Array [
              12,
              12,
            ],
          },
        ],
        "debug": false,
        "layout": Object {
          "autosize": true,
          "hoverlabel": Object {
            "namelength": -1,
          },
          "margin": Object {
            "b": 48,
            "l": 32,
            "r": 16,
            "t": 64,
          },
          "showlegend": false,
          "title": "Revenue difference estimates (USD)",
        },
        "style": Object {
          "display": "inline-block",
          "position": "relative",
        },
        "useResizeHandler": false,
      },
      Object {},
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
